[package]
name = "libriscv_sys"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "FFI bindings to libriscv, a fast RISC-V sandbox emulator"
repository = "https://github.com/libriscv/libriscv"
links = "riscv"
build = "build.rs"
include = [
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "src/**",
    "wrapper.h",
    "libriscv-c/**",
]

[features]
default = []
bindgen = ["dep:bindgen"]
binary-translation = []

[build-dependencies]
cc = "1"
bindgen = { version = "0.72", optional = true }

[dependencies]

[workspace]
members = [
    ".",
    "crates/smoke",
]
